# ephemeral-forge

./: .gitignore  CLAUDE.md  LICENSE  README.md  ephemeral-forge.example.toml  pyproject.toml
docs/: IMPLEMENTATION_PLAN.md  REQUIREMENTS.md
ephemeral_forge/: __init__.py  cli.py  config.py  fleet.py  history.py  provider.py  ssh.py
ephemeral_forge/providers/: __init__.py  aws.py  azure.py  gcp.py
reference/: IAM_SETUP.md  aws-iam-policy.json  ec2-fleet-strategies.md  fleet-attack.sh  fleet-destroy.sh  fleet-launch.sh  fleet-print-instances.py  fleet-setup.sh  gpu-tgi-test.sh
tests/: gcp_vegeta_test.py  load_test_demo.py  test_gcp_provider.py
